Adjusted width & positioning of flex container. #routeSecion now has a maximum height and a scrollbar to prevent it from stretching AccuAside out to absurd extent.

--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -4,6 +4,8 @@
 
 div#contentContainer{
     display: flex;
+    max-width: 90%;
+    margin: auto;
 }
 
 section#routeSection, aside#AccuWeather{
@@ -51,7 +53,10 @@ tr.oddRow{
     background-color: darkcyan;
     color: white;
 }
-aside#AccuWeather{
+
+/*#region ACCUWEATHER CSS */
+
+#AccuWeather{
     width: 25%;
     border: 3px solid blue;
     border-radius: 5%;
@@ -90,8 +95,11 @@ aside#AccuWeather{
 #routeSection{
     border: 3px solid blue;
     border-radius: 5%;
+    max-height: 500px;
+    overflow-x: auto;
 }
 
 #headlinesDiv{
     grid-column: 1 / 3;
 }
+/*#endregion*/
